# roiextractors

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CITATION.cff  LICENSE.txt  MANIFEST.in  README.md  SchnitzerTraceExtractor.py  ciextractor.py  codecov.yml  datacontainer.py  hello_world.py  nwbwriter.py  pyproject.toml  req.txt  requirements-dev.txt  requirements-full.txt  requirements-minimal.txt  requirements-rtd.txt  requirements-testing.txt  requirements.txt  runner.py  scnitzerTraceExtractor.py  setup.py  traceextractor.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: assess-file-changes.yml  auto-publish.yml  check-docstrings.yaml  coverage.yml  dailies.yaml  deploy_pr_tests.yaml  detect-changelog-updates.yaml  dev-testing.yaml  python-package-conda.yml  run-bioformats-tests.yml  run-tests.yml  testing.yml  update-testing-data.yml  update-version.yml
docs/: requirements_doc.txt
docs/source/: api.rst  build_ie.rst  build_re.rst  compatible.rst  (+11 more)
extractors/: __init__.py  extraction_tools.py  imagingextractor.py  memmapextractors.py
metadatafiles/: nct_ophys_metafile_cnmfe.yaml  nct_ophys_metafile_extract.yaml  nct_ophys_metafile_nwb.yaml  nct_ophys_metafile_sima.yaml  nct_ophys_metafile_suite2p.yaml  nwbwriter.schema.json
old_tests/: gin_test_config.json  test_numpymemmapextractor.py  test_scanimage_utils.py
precommit_scripts/: check_docstrings.py
roiextractors/: __init__.py  extraction_tools.py  extractorlist.py  imagingextractor.py  memmapextractors.py  multisegmentationextractor.py  segmentationextractor.py  testing.py  utils.py
segmentationextractors/: __init__.py  nwbwriter.py  segmentationextractor.py  writenwb.py
tests/: compare_docstring_testers.py  setup_paths.py  temp_test_scanimage.py  test_all.py  test_brukertiffimagingextactor.py  test_caiman_segmentation_extractor.py  test_caimansegmentationextractor.py  test_cnmfesegmentationextractor.py  test_conversions.py  test_cxdimagingextractor.py  test_docstrings.py  test_extractsegmentationextractor.py  test_femtonics.py  test_femtonicsimagingextractor.py  test_inscopix_segmentation.py  test_inscopiximagingextractor.py  test_inscopixsegmentation.py  test_inscopixsegmentationdarwin.py  test_inscopixsegmentationextractor.py  test_io.py  test_memmapextractor.py  test_micromanagertiffimagingextractor.py  test_miniansegmentationextractor.py  test_miniscopeimagingextractor.py  test_multiplane_scanimage.py  test_multitiff_multipage_imaging_extractor.py  test_multitiffmultipageextractor.py  test_numpy.py  test_numpymemmapextractor.py  test_nwb.py  test_ometiffimagingextractor.py  test_planarstackimagingextractor.py  test_read.py  test_scan_image_extractor.py  test_scan_image_tiff.py  test_scanimage_extractor.py  test_scanimage_multiroiextractor.py  test_scanimage_utils.py  test_scanimagetiffimagingextractor.py  test_schnitzer.py  (+4 more)
(+254 files in other folders)
